--- a/Style.css
+++ b/Style.css
@@ -38,7 +38,7 @@ li a:hover:not(.active) {
 .banner-title{
 	font-size:7em;
 	font-family:arial;
-	background-image:url('background.png');
+	background-image:Images/background.png);
 	background-size:cover;
 	background-position:center;
 	background-clip:text;
