--- a/Style.css
+++ b/Style.css
@@ -56,7 +56,13 @@ p {
     text-align: center;
     padding-bottom: 30px;
     font-family: Calibri, serif;
-    font-size: 1.2em;
+    font-size: 20px;
+}
+b {
+    text-align: center;
+    margin-bottom: 15px;
+    font-family: Calibri, serif;
+    font-size: 20px;
 }
 table {
     margin: auto;
@@ -67,3 +73,73 @@ body {
         background-color: #1D1F20;
         color: darkgrey;
 }
+
+
+.form_container{
+    text-align: center;
+    color: #fff;
+    margin-bottom: 100px;
+  }
+  
+  .form_container p{
+    font-size: 20px;
+    color: darkgrey;
+  }
+  .form_container b{
+    font-size: 20px;
+    color: wheat;
+ }
+  .form_container ::placeholder{
+    color: azure;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  
+  .in{
+    margin: 20px;
+    width: 50%;
+    height: 30px;
+    background: gray;
+    opacity: .8;
+    border: 1px solid white;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    transition: all .5s linear;
+  }
+  
+  .in:focus{
+    -webkit-transform: scale(110.2);
+    transform: scale(1.2);
+    transition: all .5s linear;
+  }
+  
+  #sub{
+    padding: 10px;
+    width: 50%;
+    height: 50px;
+    border-radius: 5px;
+    background-color: #353536;
+    border: none;
+    font-size: 25px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    border-top: 10px;
+  }
+  
+  .res{
+    background: white;
+    opacity: .8;
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 10px;
+    padding: 5px;
+  }
+
+  .chkbox{
+    font-family: Arial, Helvetica, sans-serif;
+    color: darkgrey;
+    
+  }
